--- a/covid-19.html
+++ b/covid-19.html
@@ -38,7 +38,7 @@
                                     <p><a href="www.ourworldindata.org">www.ourworldindata.org</a></p> 
 
                                 <h3>Dashboard Link</h3>
-                                    <p>Check out the Full Power BI dashboard <a href="https://app.powerbi.com/reportEmbed?reportId=bff15cf5-88cc-4be5-af93-c2a1ff93eb84&autoAuth=true&ctid=ecd9255a-42d5-410c-8574-5c26d93dfca9&config=eyJjbHVzdGVyVXJsIjoiaHR0cHM6Ly93YWJpLWluZGlhLWNlbnRyYWwtYS1wcmltYXJ5LXJlZGlyZWN0LmFuYWx5c2lzLndpbmRvd3MubmV0LyJ9">here</a>. The data is updated till 22nd of August 2021.</p>
+                                    <p>Check out the Full Power BI dashboard <a href="https://app.powerbi.com/links/bray3W7WPT?ctid=ecd9255a-42d5-410c-8574-5c26d93dfca9&pbi_source=linkShare">here</a>. The data is updated till 22nd of August 2021.</p>
                                     
                                 <h3>Steps followed in creation of Dashboard</h3>
                                     <p>
