--- a/covid-19.html
+++ b/covid-19.html
@@ -38,7 +38,14 @@
                                     <p><a href="www.ourworldindata.org">www.ourworldindata.org</a></p> 
 
                                 <h3>Dashboard Link</h3>
-                                    <p>Check out the Full Power BI dashboard <a href="https://app.powerbi.com/links/bray3W7WPT?ctid=ecd9255a-42d5-410c-8574-5c26d93dfca9&pbi_source=linkShare">here</a>. The data is updated till 22nd of August 2021.</p>
+                                    <p>Check out the Full Power BI dashboard <a href="https://app.powerbi.com/view?r=eyJrIjoiZTM4OTBjNWUtZDM4Yi00MDcxLTgzMjktNWMzNTdmODRmMThiIiwidCI6ImVjZDkyNTVhLTQyZDUtNDEwYy04NTc0LTVjMjZkOTNkZmNhOSJ9">here</a>. The data is updated till 22nd of August 2021.
+                                        <br>
+                                        <b>Note:</b> All the 3 pages of the dashboard contains gif background which is dynamic. In order to view the dynamic background please do the following settings in your browser: <b>browser_name://flags/</b>  (e.g.- chrome://flags/)
+                                        <br>
+                                        <b>GPU rasterization</b> will be <b>default</b>. Please change it to "<b>Disable</b>" and restart your browser. Then the gif back ground will be dynamic.
+                                        Please see the <a href="https://community.powerbi.com/t5/Desktop/GIF-not-working-once-report-is-published/td-p/2088013">PowerBI community link</a>) for further details.
+                                        
+                                    </p>
                                     
                                 <h3>Steps followed in creation of Dashboard</h3>
                                     <p>
